fixed time Overflow display

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ div.content:hover div.control{
   padding:20px;
 }
 div.output {
-  padding-top:30px;
+  padding-top:20px;
   float: right;
   text-align:center;
   margin-right: 120px;
